# datapie

./: .gitignore  README.md  Roadmap.md  pyproject.toml
datapie/: database_adapter.py  main.py  query_builder.py  utils.py
datapie/components/: command_mode_input.py  config_screen.py  connection_picker_screen.py  main_screen.py  table_view.py  tree.py  vim_editor.py
datapie/configuration/: config.py
datapie/configuration/css/: datapie.tcss
datapie/table_view/: table_view.py
datapie/tree_view/: tree.py
